--- a/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
+++ b/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
@@ -91,9 +91,10 @@
       &.has-thumb
         > * > *
           margin-left: 3.5em
-      .thumb
-        width: 2.5em
-        height: 2.5em
+        .thumb
+          width: 2.5em
+          height: 2.5em
+          margin-left: 0
     .keynote
       .session-title,
       .speaker,
@@ -215,7 +216,7 @@
   // PROFILE
   .profile-sessions
     .session
-      
+
 
   //
   //
